--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,22 @@
-name: Deploy to Fly.io
-on:
-  push:
-    branches:
-      - main
+# name: Deploy to Fly.io
+# on:
+#   push:
+#     branches:
+#       - main
 
-permissions:
-  contents: read
+# permissions:
+#   contents: read
 
-jobs:
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - run: echo "$FLY_TOML" > fly.toml
-        env:
-          FLY_TOML: ${{ vars.FLY_TOML }}
-      - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only --ha=false
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+# jobs:
+#   deploy:
+#     name: Deploy
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#       - run: echo "$FLY_TOML" > fly.toml
+#         env:
+#           FLY_TOML: ${{ vars.FLY_TOML }}
+#       - uses: superfly/flyctl-actions/setup-flyctl@master
+#       - run: flyctl deploy --remote-only --ha=false
+#         env:
+#           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
