--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-BOT_HOST=
-BOT_TOKEN=
-OPENAI_API_KEY=
+BOT_HOST=example.com
+BOT_TOKEN=000:abc13
+OPENAI_API_KEY=sk-000
+
+BOT_USERNAME=@MyExampleBot
+BOT_ADMIN_USERNAME=username07
