fix: group update handler

--- a/fly.toml.example
+++ b/fly.toml.example
@@ -15,3 +15,8 @@ primary_region = "sin"
   auto_start_machines = true
   min_machines_running = 1
   processes = ["app"]
+
+[[vm]]
+  cpu_kind = "shared"
+  cpus = 1
+  memory_mb = 256
